# wled_stoplight_app

./: .gitignore  pyproject.toml  setup.py  wled_config.json
src/wled_stoplight/: config_creator.py  stoplight_control.py  wled_light.py
