[tool.poetry]
name = "wled-stoplight"
version = "0.1.0"
description = ""
authors = ["Luke Levesque <Luke.LVSQ5@gmail.com>"]
readme = "README.md"
packages = [{include = "wled_stoplight", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
